--- a/html-syntax/index.html
+++ b/html-syntax/index.html
@@ -6,7 +6,7 @@
     <title>HTML Syntax</title>
   </head>
   <body>
-    <img src="https://archives.bulbagarden.net/media/upload/thumb/7/7e/006Charizard.png/250px-006Charizard.png">
+    <img src="https://archives.bulbagarden.net/media/upload/thumb/7/7e/006Charizard.png/250px-006Charizard.png" alt="An image of a Charizard">
     <h1>Charizard</h1>
     <p>&#169; Pokemon. &#174; Nintendo.</p>
   </body>
