Completed javascript-typing-tutor

--- a/javascript-typing-tutor/index.html
+++ b/javascript-typing-tutor/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="text">
-    <span class="1">g</span>
+    <span class="one">g</span>
     <span class="2">r</span>
     <span class="3">u</span>
     <span class="4">m</span>
